--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <div class="modal">
       <div class="title">
         <h2>Заголовок</h2>
-        <img src="icons/close.png" alt="close">
+        <button class="btn--close">
+          <img src="icons/close.png" alt="close">
+        </button>
       </div>
       <div class="notification"><!--
      --><p class="notification_text">Текст уведомления</p>
@@ -28,9 +30,11 @@
         <p>Классический текст-«рыба». Является искажённым отрывком из философского трактата Марка Туллия Цицерона</p>
       </div>
       <div class="buttons">
-        <button class="one">Action</button>
-        <button class="two">Action</button>
-        <button class="three">Action</button>
+        <button class="btn btn--primary">Action</button>
+        <button class="btn btn--secondary">Action</button>
+        <a class="btn btn--link" href="#">Action</a>
+
+        <!-- <button class="btn btn--link">Action</button> -->
       </div>
     </div>
   </div>
